--- a/TimeSequenceTool/TimeSequenceDiagram.html
+++ b/TimeSequenceTool/TimeSequenceDiagram.html
@@ -13,12 +13,17 @@
 
             var data = {
                 "entities": [
-                { "iconName": "images/phone.png", "id": "Fred", "phoneNum": "15801316375", group: "group" },
-                { "iconName": "images/phone.png", "id": "Bob", "phoneNum": "13552915937", group: "group" },
-                { "iconName": "images/phone.png", "id": "Hank", "phoneNum": "18701306061", group: "group" },
-                { "iconName": "images/phone.png", "id": "Renee", "phoneNum": "13126515995", group: "group" },
-                { "iconName": "images/phone.png", "id": "Jack", "phoneNum": "13126515111", group: "group" },
-                { "id": "group", isGroup: true }
+                { "iconName": "images/phone.png", "id": "Fred", "phoneNum": "15801316375" },
+                { "iconName": "images/phone.png", "id": "Bob", "phoneNum": "13552915937" },
+                { "iconName": "images/phone.png", "id": "Hank", "phoneNum": "18701306061" },
+                { "iconName": "images/phone.png", "id": "Renee", "phoneNum": "13126515995" },
+                { "iconName": "images/phone.png", "id": "Jack", "phoneNum": "13126515111" },
+                //{ "iconName": "images/phone.png", "id": "Fred", "phoneNum": "15801316375",  group: "group" },
+                //{ "iconName": "images/phone.png", "id": "Bob", "phoneNum": "13552915937",   group: "group" },
+                //{ "iconName": "images/phone.png", "id": "Hank", "phoneNum": "18701306061",  group: "group" },
+                //{ "iconName": "images/phone.png", "id": "Renee", "phoneNum": "13126515995", group: "group" },
+                //{ "iconName": "images/phone.png", "id": "Jack", "phoneNum": "13126515111",  group: "group" },
+                //{ "id": "group", isGroup: true }
                 ]
                 ,
                 "links": [
