--- a/力导向布局/代码/ForceDirectedLayout/basic_spring.html
+++ b/力导向布局/代码/ForceDirectedLayout/basic_spring.html
@@ -73,7 +73,7 @@
 
             layout.spring = 0.9;
             layout.friction = 0.1;
-            layout.grivity = 0;
+            layout.gravity = 0;
             //layout.minLength = 100;
 
             layout.doLayout(myDiagram);
