--- a/扩大推移布局/代码/MoveLayout/basic_expand.html
+++ b/扩大推移布局/代码/MoveLayout/basic_expand.html
@@ -16,7 +16,7 @@
                 {
                     // position the graph in the middle of the diagram
                     //initialContentAlignment: go.Spot.Center,
-                    autoScale: go.Diagram.Uniform,
+                    initialAutoScale: go.Diagram.Uniform,
                     contentAlignment: go.Spot.Center,
                     layout: $(go.ForceDirectedLayout),
                     nodeTemplate:
