--- a/扩大推移布局/代码/MoveLayout/basic_expand.html
+++ b/扩大推移布局/代码/MoveLayout/basic_expand.html
@@ -6,7 +6,8 @@
     <!-- Copyright 1998-2016 by Northwoods Software Corporation. -->
     <meta charset="UTF-8">
     <script src="js/go-debug-1.7-test.js"></script>
-    <script src="js/MoveLayout.js"></script>
+    <!--<script src="js/MoveLayout.js"></script>-->
+    <script src="js/MoveLayout_New.js"></script>
     <script id="code">
         function init() {
             var $ = go.GraphObject.make;  // for conciseness in defining templates
