--- a/环形右键菜单/代码/CircleContextMenu/circleContextMenu.html
+++ b/环形右键菜单/代码/CircleContextMenu/circleContextMenu.html
@@ -8,7 +8,8 @@
     <!--<script src="js/go.js"></script>-->
     <!--<script src="js/ContextMenu.js"></script>-->
     <script src="js/go-debug-1.7-test.js"></script>
-    <script src="js/ContextMenu_Sector.js"></script>
+    <!--<script src="js/ContextMenu_Sector.js"></script>-->
+    <script src="js/ContextMenu_Sector_Test.js"></script>
     <script id="code">
         function init() {
             var $ = go.GraphObject.make;  // for conciseness in defining templates
