--- a/环形右键菜单/代码/CircleContextMenu/circleContextMenu_Normal.html
+++ b/环形右键菜单/代码/CircleContextMenu/circleContextMenu_Normal.html
@@ -20,7 +20,14 @@
                     imagePath: "images/Airplane.jpg",
                     text: "测试1",
                     children: [
-                        
+                        {
+                            imagePath: "images/Airplane.jpg",
+                            text: "测试1-1",
+                            func: function () { alert("恭喜你，测试成功!(1-1)") },
+                            children: [
+
+                            ]
+                        },
                     ]
                 },
                 {
@@ -114,7 +121,13 @@
                     imagePath: "images/Airplane.jpg",
                     text: "测试4",
                     children: [
+                        {
+                            imagePath: "images/Airplane.jpg",
+                            text: "测试4-1",
+                            children: [
 
+                            ]
+                        },
                     ]
                 },
                 {
