--- a/动态映射加载/DynamicMapping/动态映射.html
+++ b/动态映射加载/DynamicMapping/动态映射.html
@@ -18,6 +18,7 @@
     </div>
     <button style="border: solid 1px blue; width: 80px; height: 30px" onclick="load()">加载数据</button>
     <button style="border: solid 1px blue; width: 80px; height: 30px" onclick="doTreeLayout()">树形布局</button>
+    <button style="border: solid 1px blue; width: 80px; height: 30px" onclick="doLayout()">布局</button>
     <label id="nodesCount">NaN</label>&nbsp;&nbsp;<label id="linksCount">NaN</label>
 </body>
 </html>
