--- a/动态映射加载/DynamicMapping/动态映射.html
+++ b/动态映射加载/DynamicMapping/动态映射.html
@@ -5,6 +5,9 @@
     <title></title>
     <script src="js/go-debug-1.8.7-test.js"></script>
     <script src="js/DynamicMapping.js"></script>
+    <script src="js/DynamicMapping.js"></script>
+    <script src="js/DynamicMapping.js"></script>
+    <script src="js/DynamicMapping.js"></script>
 </head>
 <body onload="init()">
     <div style="display: flex;">
