--- a/动态映射加载/DynamicMapping/动态映射.html
+++ b/动态映射加载/DynamicMapping/动态映射.html
@@ -8,9 +8,9 @@
 </head>
 <body onload="init()">
     <div style="display: flex;">
-        <div id="diagramDiv" style="background-color: white; border: solid 1px blue; width: 100%; height: 580px;"></div>
-        <!--<div id="wholeDiagramDiv" style="background-color: white; border: solid 1px blue; width: 50%; height: 800px;"></div>-->
-        <!--<div id="wholeDiagramDiv" style="background-color: white; border: solid 1px blue; width: 50%; height: 800px; display: none;"></div>-->
+        <div id="diagramDiv" style="background-color: white; border: solid 1px blue; width: 50%; height: 580px;"></div>
+        <div id="wholeDiagramDiv" style="background-color: white; border: solid 1px blue; width: 50%; height: 580px;"></div>
+        <!--<div id="wholeDiagramDiv" style="background-color: white; border: solid 1px blue; width: 50%; height: 580px; display: none;"></div>-->
         <!--<div id="wholeDiagramDiv" style="background-color: white; border: solid 1px blue; width: 0px; height: 0px; display: none;"></div>-->
         <!--<div id="wholeDiagramDiv" style="background-color: white; border: solid 1px blue; width: 50%; height: 800px; opacity: 0;"></div>-->
         <!--<div id="wholeDiagramDiv" style="background-color: white; border: solid 1px blue; width: 0px; height: 0px"></div>-->
