--- a/选项卡菜单/TabMenu/TabMenu.html
+++ b/选项卡菜单/TabMenu/TabMenu.html
@@ -36,6 +36,9 @@
                         test5
                     </div>
                 </div>
+                <div id="hideMenu">
+                    <a><i class="svg_jiantouxiangshang svg_style"></i></a>
+                </div>
             </div>
             <div class="vis_center">
 
