--- a/选项卡菜单/TabMenu/TabMenu.html
+++ b/选项卡菜单/TabMenu/TabMenu.html
@@ -34,12 +34,17 @@
                     </div>
                     <div class="vis_tabMenu" data-group="5">
                         面板5
+                        <a class="vis_scroll vis_scroll_left">
+                            <i class="svg_jiantouxiangzuo svg_style"></i>
+                        </a>
+                        <a class="vis_scroll vis_scroll_right">
+                            <i class="svg_jiantouxiangyou svg_style"></i>
+                        </a>
                     </div>
-                    <div class="vis_scroll">test</div>
                 </div>
-                <div id="hideMenu">
-                    <a><i class="svg_jiantouxiangshang svg_style"></i></a>
-                </div>
+                <a id="hideMenu">
+                    <i class="svg_jiantouxiangshang svg_style"></i>
+                </a>
             </div>
             <div class="vis_center">
 
