--- a/选项卡菜单/TabMenu/TabMenu.html
+++ b/选项卡菜单/TabMenu/TabMenu.html
@@ -32,8 +32,9 @@
                     <div class="vis_tabMenu" data-group="4">
                         面板4
                     </div>
-                    <div class="vis_tabMenu" data-group="5">
-                        面板5
+                    <div class="vis_tabMenu" data-group="5" style="background: #fbfbfb; ">
+                        <div style="background: url(/images/menu.png) no-repeat; width: 1800px; height: 100%; padding: 0px 20px; background-origin: content-box; ">
+                        </div>
                         <a class="vis_scroll vis_scroll_left">
                             <i class="svg_jiantouxiangzuo svg_style"></i>
                         </a>
