--- a/环形树布局/CircleTreeLayout/CircleTreeLayout.html
+++ b/环形树布局/CircleTreeLayout/CircleTreeLayout.html
@@ -4,9 +4,11 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
     <script src="js/go-debug-1.8.7.js"></script>
+    <script src="js/CircleTreeLayout.js"></script>
     <script src="js/testDiagram.js"></script>
 </head>
 <body onload="init()">
     <div id="diagramDiv" style="background-color: white; border: solid 1px blue; width: 100%; height: 800px;"></div>
+    <button style="border: solid 1px blue; width: 80px; height: 30px" onclick="layout()">环形树布局</button>
 </body>
 </html>
