--- a/环形树布局/CircleTreeLayout/CircleTreeLayout.html
+++ b/环形树布局/CircleTreeLayout/CircleTreeLayout.html
@@ -8,7 +8,9 @@
     <script src="js/testDiagram.js"></script>
     <script>
         function relayout() {
-            diagram.layoutDiagram();
+            diagram.layout.defaultRootNodes.clear();
+            diagram.layout.defaultRootNodes.addAll(diagram.selection);
+            diagram.layoutDiagram(true);
         };
     </script>
 </head>
