--- a/可视化实验室/WebSite/magnifier_圆形.html
+++ b/可视化实验室/WebSite/magnifier_圆形.html
@@ -13,9 +13,10 @@
             z-index: 300; /* make sure its in front */
             /*border: solid 1px blue;*/
             border: solid 3px #0d3244;
-            width: 200px;
-            height: 200px;
-            border-radius: 100px;
+            width: 300px;
+            height: 300px;
+            /*border-radius: 100px;*/
+            border-radius: 100%;
         }
 
             .magnifier canvas {
