--- a/环形右键菜单/代码/CircleContextMenu/circleContextMenu_Normal.html
+++ b/环形右键菜单/代码/CircleContextMenu/circleContextMenu_Normal.html
@@ -29,6 +29,14 @@
 
                             ]
                         },
+                        {
+                            imagePath: "images/工具.png",
+                            text: "测试1-2",
+                            func: function () { alert("恭喜你，测试成功!(1-2)") },
+                            children: [
+
+                            ]
+                        },
                     ]
                 },
                 {
