--- a/环形右键菜单/代码/CircleContextMenu/circleContextMenu_Normal.html
+++ b/环形右键菜单/代码/CircleContextMenu/circleContextMenu_Normal.html
@@ -7,7 +7,8 @@
     <meta charset="UTF-8">
     <!--<script src="js/go.js"></script>-->
     <!--<script src="js/ContextMenu.js"></script>-->
-    <script src="js/go-debug-1.7-test.js"></script>
+    <!--<script src="js/go-debug-1.7-test.js"></script>-->
+    <script src="js/go-debug-1.8.7-test.js"></script>
     <!--<script src="js/ContextMenu_Sector.js"></script>-->
     <!--<script src="js/ContextMenu_Sector_Test.js"></script>-->
     <!--<script src="js/ContextMenu_Sector_Normal.js"></script>-->
@@ -268,7 +269,9 @@
                     locationSpot: go.Spot.Center,
                     contextClick: function (e, obj) {
                         obj.contextMenu.children.each(function (child) {
-                            child.hideChildren();
+                            //child.hideChildren();
+                            //child.alignment = child.alignment1;
+                            child.isExpanded = false;
                         });
 
                         return;
