--- a/环形右键菜单/代码/CircleContextMenu/circleContextMenu_Circle.html
+++ b/环形右键菜单/代码/CircleContextMenu/circleContextMenu_Circle.html
@@ -11,7 +11,8 @@
     <script src="js/go-debug-1.8.7-test.js"></script>
     <!--<script src="js/ContextMenu_Sector.js"></script>-->
     <!--<script src="js/ContextMenu_Sector_Test.js"></script>-->
-    <script src="js/ContextMenu_Sector_Normal.js"></script>
+    <!--<script src="js/ContextMenu_Sector_Normal.js"></script>-->
+    <script src="js/ContextMenu_Sector_Circle.js"></script>
     <script id="code">
         function init() {
             var $ = go.GraphObject.make;  // for conciseness in defining templates
