--- a/可视化实验室/GoJS实验室/平行链接.html
+++ b/可视化实验室/GoJS实验室/平行链接.html
@@ -71,6 +71,7 @@
                         //routing: go.Link.Orthogonal,
                         relinkableFrom: true,
                         relinkableTo: true,
+                        reshapable: true,
                         routing: go.Link.Normal,
                         //curve: go.Link.Bezier,
                     },
@@ -164,15 +165,15 @@
                     //    to: to.key
                     //});
 
-                    linkArray.push({
-                        from: to.key,
-                        to: to.key
-                    });
+                    //linkArray.push({
+                    //    from: to.key,
+                    //    to: to.key
+                    //});
 
-                    linkArray.push({
-                        from: to.key,
-                        to: to.key
-                    });
+                    //linkArray.push({
+                    //    from: to.key,
+                    //    to: to.key
+                    //});
                 }
             }
 
