--- a/可视化实验室/GoJS实验室/页面模板/基础页面模板.html
+++ b/可视化实验室/GoJS实验室/页面模板/基础页面模板.html
@@ -71,6 +71,7 @@
                         //routing: go.Link.Orthogonal,
                         //relinkableFrom: true,
                         //relinkableTo: true,
+                        //reshapable: true,
                         routing: go.Link.Normal,
                         //curve: go.Link.Bezier,
                     },
