--- a/可视化实验室/GoJS实验室/平行链接.html
+++ b/可视化实验室/GoJS实验室/平行链接.html
@@ -69,6 +69,8 @@
                     {
                         //isLayoutPositioned: false,
                         //routing: go.Link.Orthogonal,
+                        //adjusting: go.Link.End,
+                        //corner: 50,
                         relinkableFrom: true,
                         relinkableTo: true,
                         reshapable: true,
