--- a/可视化实验室/GoJS实验室/平行链接.html
+++ b/可视化实验室/GoJS实验室/平行链接.html
@@ -74,6 +74,7 @@
                         relinkableFrom: true,
                         relinkableTo: true,
                         reshapable: true,
+                        //isDivergenceBezier: false,
                         routing: go.Link.Normal,
                         //curve: go.Link.Bezier,
                     },
@@ -93,8 +94,8 @@
                         }),
                     $$(go.TextBlock,
                         {
-                            //text: "test",
-                            segmentOffset: new go.Point(-30, 0),
+                            text: "test",
+                            //segmentOffset: new go.Point(-30, 0),
                         })
                 );
         };
