--- a/ArcGIS开发/ArcGIS/start2D.html
+++ b/ArcGIS开发/ArcGIS/start2D.html
@@ -24,7 +24,9 @@
         ], function (Map, MapView) {
 
             var map = new Map({
-                basemap: "streets"
+                basemap: "streets",
+                //basemap: "topo",
+                //basemap: "hybrid"
             });
 
             var view = new MapView({
