--- a/ArcGIS开发/ArcGIS/start3D.html
+++ b/ArcGIS开发/ArcGIS/start3D.html
@@ -26,7 +26,8 @@
         ], function (Map, SceneView) {
 
             var map = new Map({
-                basemap: "streets",
+                //basemap: "streets",
+                basemap: "hybrid",
                 ground: "world-elevation"
             });
 
